--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8730,205 +8730,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #5d5d62; }
+  background: #98d565; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #769f87; }
+  background: #bb9686; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #4191b8; }
+  background: #3b06a1; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #31eae3; }
+  background: #89d0cc; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #cb7870; }
+  background: #c32fdc; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #7c133c; }
+  background: #1e0962; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #33152e; }
+  background: #a44ba6; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #1223ac; }
+  background: #6ab6c7; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #0b2ba4; }
+  background: #ad97eb; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #a27541; }
+  background: #fae67a; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #f96ff4; }
+  background: #53ebbe; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #7a5364; }
+  background: #563cbf; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #915ca0; }
+  background: #4c7e8c; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #13bd16; }
+  background: #43b4c6; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #8db7bb; }
+  background: #f992bf; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #74b1df; }
+  background: #0b5e40; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #bff60d; }
+  background: #1766c3; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #fe23f5; }
+  background: #20f4f6; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #43ee8b; }
+  background: #d54d4f; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #df896d; }
+  background: #b75dfc; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #9750dd; }
+  background: #94ae8d; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #f02d3a; }
+  background: #8abbe4; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #b2dac8; }
+  background: #f8121b; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #f42080; }
+  background: #5efd97; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #7bbc1b; }
+  background: #999a3b; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #655394; }
+  background: #d94247; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #cf9259; }
+  background: #8df1d2; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #95abf8; }
+  background: #6fe50c; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #e623c9; }
+  background: #45016f; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #2e017c; }
+  background: #c8a507; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #76fd4e; }
+  background: #3a74d8; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #fe9171; }
+  background: #aaaf28; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #0b6afa; }
+  background: #baea66; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #3630b7; }
+  background: #c9999f; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #be5cf5; }
+  background: #6a5c70; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #fc75d8; }
+  background: #f9f075; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #f54f0f; }
+  background: #897655; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #ee362a; }
+  background: #6cfbb7; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #486165; }
+  background: #2993a3; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #0ba8af; }
+  background: #5c874e; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #c2f189; }
+  background: #baa75a; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #d7b270; }
+  background: #876ac7; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #73e790; }
+  background: #9fabcf; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #dc1132; }
+  background: #b8db59; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #7f88d2; }
+  background: #aef63c; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #55d89b; }
+  background: #a711ec; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #579447; }
+  background: #126ef4; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #f32d27; }
+  background: #848869; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #cbaf40; }
+  background: #4dd764; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #1c415c; }
+  background: #cab74a; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #c08fe1; }
+  background: #beedb2; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #5a664a; }
+  background: #5b3cdb; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #17a26e; }
+  background: #b104bb; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #e5de33; }
+  background: #584335; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #bcace9; }
+  background: #e52684; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #aa7b43; }
+  background: #8a5a0b; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #f4d3d7; }
+  background: #d404f5; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #da78de; }
+  background: #7e2f71; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #3aa856; }
+  background: #741e53; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #f2b2e8; }
+  background: #e091eb; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #e82da1; }
+  background: #1ab7c0; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #7b6817; }
+  background: #b9a787; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #31c6ab; }
+  background: #31e888; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #d961d4; }
+  background: #8e308f; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #7dfec3; }
+  background: #ed8b49; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #4fd8e4; }
+  background: #a5f5e3; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #61d3ae; }
+  background: #6e6ccf; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #9ee78c; }
+  background: #0ac21d; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #1055ac; }
+  background: #80dad1; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #c358e4; }
+  background: #b2e171; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #bb0965; }
+  background: #8602ef; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #20df9a; }
+  background: #97c45d; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #c773a3; }
+  background: #c302b6; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #436484; }
+  background: #056e1d; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #a9a732; }
+  background: #e05967; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #09203c; }
+  background: #173351; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #b8cda5; }
+  background: #7aea40; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #bc8520; }
+  background: #582fe8; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #a41d09; }
+  background: #2e67aa; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #865f73; }
+  background: #506c21; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #1390b3; }
+  background: #dabf74; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #69414c; }
+  background: #50931b; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #94a8d4; }
+  background: #b3792a; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #825c2d; }
+  background: #9bb060; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #fe862d; }
+  background: #9ed025; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #bbc39c; }
+  background: #1b5ea5; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #f157b9; }
+  background: #9bd5d0; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #5ff507; }
+  background: #64e4aa; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #3977c8; }
+  background: #1eab10; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #211daf; }
+  background: #0fd397; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #3f9830; }
+  background: #7023a0; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #1dc825; }
+  background: #d9127f; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #e01fd4; }
+  background: #d7e6a0; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #190b50; }
+  background: #9c4cad; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #6b9b81; }
+  background: #9315a5; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #109c99; }
+  background: #c4ce27; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #639b21; }
+  background: #cf7648; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #9ac9aa; }
+  background: #8b2fdc; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #8fb397; }
+  background: #0ad62e; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #b58d4a; }
+  background: #b8f31f; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -13308,6 +13308,8 @@ table .parent-row,
         margin-right: 0px; }
         .list-view-hover-wrapper .content-wrapper .dropdowns-wrapper .dropdown-main-div {
           flex-direction: column; }
+          .list-view-hover-wrapper .content-wrapper .dropdowns-wrapper .dropdown-main-div .dropdwon-top {
+            min-width: 100% !important; }
           .list-view-hover-wrapper .content-wrapper .dropdowns-wrapper .dropdown-main-div .dropdown-div {
             width: 100% !important; }
           .list-view-hover-wrapper .content-wrapper .dropdowns-wrapper .dropdown-main-div .mr-4 {
