--- a/scss/_fahad-responsive.scss
+++ b/scss/_fahad-responsive.scss
@@ -406,6 +406,7 @@
 
                     .dropdwon-top {
                         // min-width: 265px;
+                        min-width: 100% !important;
 
                     }
 
