--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8730,205 +8730,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #98d565; }
+  background: #9725f5; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #bb9686; }
+  background: #63ffd3; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #3b06a1; }
+  background: #c68e47; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #89d0cc; }
+  background: #8c7c98; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #c32fdc; }
+  background: #c3a695; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #1e0962; }
+  background: #b0c1ab; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #a44ba6; }
+  background: #c34179; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #6ab6c7; }
+  background: #cf41e8; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #ad97eb; }
+  background: #3d1b59; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #fae67a; }
+  background: #6b6073; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #53ebbe; }
+  background: #99269d; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #563cbf; }
+  background: #c55a27; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #4c7e8c; }
+  background: #102223; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #43b4c6; }
+  background: #630d90; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #f992bf; }
+  background: #e3b59d; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #0b5e40; }
+  background: #0576c2; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #1766c3; }
+  background: #45bdca; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #20f4f6; }
+  background: #cd5b97; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #d54d4f; }
+  background: #3da926; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #b75dfc; }
+  background: #b667c2; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #94ae8d; }
+  background: #1dea28; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #8abbe4; }
+  background: #73c58c; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #f8121b; }
+  background: #f24e4c; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #5efd97; }
+  background: #b7b4d3; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #999a3b; }
+  background: #eacd8a; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #d94247; }
+  background: #e32a3d; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #8df1d2; }
+  background: #8fdee6; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #6fe50c; }
+  background: #04804e; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #45016f; }
+  background: #7cec71; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #c8a507; }
+  background: #db1c28; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #3a74d8; }
+  background: #2fc6d1; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #aaaf28; }
+  background: #f03d0f; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #baea66; }
+  background: #8a33ec; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #c9999f; }
+  background: #bd9ce2; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #6a5c70; }
+  background: #2826e9; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #f9f075; }
+  background: #79b530; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #897655; }
+  background: #f7f511; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #6cfbb7; }
+  background: #693baf; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #2993a3; }
+  background: #3bee09; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #5c874e; }
+  background: #60e148; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #baa75a; }
+  background: #b429e2; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #876ac7; }
+  background: #635996; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #9fabcf; }
+  background: #a11ab3; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #b8db59; }
+  background: #f85d92; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #aef63c; }
+  background: #9570e7; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #a711ec; }
+  background: #2f0170; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #126ef4; }
+  background: #af03d8; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #848869; }
+  background: #1eb3fa; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #4dd764; }
+  background: #3d8752; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #cab74a; }
+  background: #794993; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #beedb2; }
+  background: #12587c; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #5b3cdb; }
+  background: #9e16f2; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #b104bb; }
+  background: #9cc484; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #584335; }
+  background: #418e57; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #e52684; }
+  background: #85def0; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #8a5a0b; }
+  background: #d3469f; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #d404f5; }
+  background: #92305e; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #7e2f71; }
+  background: #ca6f14; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #741e53; }
+  background: #ec89e1; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #e091eb; }
+  background: #ce8072; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #1ab7c0; }
+  background: #8da70a; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #b9a787; }
+  background: #349140; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #31e888; }
+  background: #e0ad4e; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #8e308f; }
+  background: #94ce79; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #ed8b49; }
+  background: #72067b; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #a5f5e3; }
+  background: #90d074; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #6e6ccf; }
+  background: #16ce42; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #0ac21d; }
+  background: #512dab; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #80dad1; }
+  background: #075a23; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #b2e171; }
+  background: #9331d4; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #8602ef; }
+  background: #118ff2; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #97c45d; }
+  background: #e0b35d; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #c302b6; }
+  background: #ac1860; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #056e1d; }
+  background: #c84939; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #e05967; }
+  background: #23092e; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #173351; }
+  background: #69db63; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #7aea40; }
+  background: #46e86c; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #582fe8; }
+  background: #fabdb6; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #2e67aa; }
+  background: #231cd4; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #506c21; }
+  background: #e5f4b6; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #dabf74; }
+  background: #209104; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #50931b; }
+  background: #df803b; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #b3792a; }
+  background: #f055ab; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #9bb060; }
+  background: #034a89; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #9ed025; }
+  background: #ba7369; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #1b5ea5; }
+  background: #0670ca; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #9bd5d0; }
+  background: #9f5bce; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #64e4aa; }
+  background: #59fecd; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #1eab10; }
+  background: #f60903; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #0fd397; }
+  background: #0c970e; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #7023a0; }
+  background: #437c4b; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #d9127f; }
+  background: #4cf125; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #d7e6a0; }
+  background: #bb9427; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #9c4cad; }
+  background: #fdf4dd; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #9315a5; }
+  background: #477261; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #c4ce27; }
+  background: #eed3bc; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #cf7648; }
+  background: #8664ea; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #8b2fdc; }
+  background: #c001da; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #0ad62e; }
+  background: #27a74b; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #b8f31f; }
+  background: #93ebad; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -12898,13 +12898,12 @@ table .parent-row,
   border: 1px solid #C4C4C4; }
   .list-view-hover-wrapper .content-wrapper {
     display: flex;
-    justify-content: space-between;
-    align-items: center; }
+    justify-content: space-between; }
     .list-view-hover-wrapper .content-wrapper .dropdowns-wrapper {
       border: 1px solid #C4C4C4;
       padding: 20px;
       width: 100%;
-      margin-right: 50px; }
+      margin-right: 27px; }
       .list-view-hover-wrapper .content-wrapper .dropdowns-wrapper .dropdown-main-div {
         display: flex;
         justify-content: space-between;
@@ -12961,7 +12960,8 @@ table .parent-row,
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    margin-bottom: 10px; }
+    margin-bottom: 10px;
+    cursor: pointer; }
     .dropdown-connectors-list li div {
       margin-right: 10px; }
     .dropdown-connectors-list li .dropdwon-connector-img {
@@ -13025,10 +13025,10 @@ table .parent-row,
 
 /* Style the indicator (dot/circle) */
 .container .checkmark:after {
-  top: 9px;
-  left: 9px;
-  width: 8px;
-  height: 8px;
+  top: 5px;
+  left: 5px;
+  width: 6px;
+  height: 6px;
   border-radius: 50%;
   background: white; }
 
