--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8730,205 +8730,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #9725f5; }
+  background: #f6435e; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #63ffd3; }
+  background: #20b5cf; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #c68e47; }
+  background: #4be570; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #8c7c98; }
+  background: #ba743f; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #c3a695; }
+  background: #d0d79a; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #b0c1ab; }
+  background: #075eae; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #c34179; }
+  background: #5d5597; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #cf41e8; }
+  background: #80ab66; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #3d1b59; }
+  background: #4a6482; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #6b6073; }
+  background: #45b531; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #99269d; }
+  background: #c710c6; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #c55a27; }
+  background: #07a505; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #102223; }
+  background: #5efa92; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #630d90; }
+  background: #842258; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #e3b59d; }
+  background: #f3ea1f; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #0576c2; }
+  background: #c02b19; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #45bdca; }
+  background: #406e4e; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #cd5b97; }
+  background: #544947; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #3da926; }
+  background: #633af6; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #b667c2; }
+  background: #5b8094; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #1dea28; }
+  background: #3e8442; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #73c58c; }
+  background: #211657; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #f24e4c; }
+  background: #ae5a14; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #b7b4d3; }
+  background: #248fc1; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #eacd8a; }
+  background: #ba6b46; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #e32a3d; }
+  background: #fd1fae; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #8fdee6; }
+  background: #a66f8b; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #04804e; }
+  background: #09329a; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #7cec71; }
+  background: #e0ae5f; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #db1c28; }
+  background: #0d8b8c; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #2fc6d1; }
+  background: #160ca1; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #f03d0f; }
+  background: #eccca9; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #8a33ec; }
+  background: #5b508c; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #bd9ce2; }
+  background: #233d34; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #2826e9; }
+  background: #fabd03; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #79b530; }
+  background: #b9e0bf; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #f7f511; }
+  background: #6078c0; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #693baf; }
+  background: #30cf95; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #3bee09; }
+  background: #8f8aa2; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #60e148; }
+  background: #6f36f5; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #b429e2; }
+  background: #30b317; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #635996; }
+  background: #1f9a44; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #a11ab3; }
+  background: #c9da1d; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #f85d92; }
+  background: #52f85f; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #9570e7; }
+  background: #617641; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #2f0170; }
+  background: #a2a6bd; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #af03d8; }
+  background: #420383; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #1eb3fa; }
+  background: #6987f7; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #3d8752; }
+  background: #ea3bb0; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #794993; }
+  background: #05e2e4; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #12587c; }
+  background: #af865d; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #9e16f2; }
+  background: #075991; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #9cc484; }
+  background: #06fcc8; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #418e57; }
+  background: #6358b8; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #85def0; }
+  background: #76b2c8; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #d3469f; }
+  background: #046cf5; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #92305e; }
+  background: #41c416; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #ca6f14; }
+  background: #9445a7; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #ec89e1; }
+  background: #e1fc62; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #ce8072; }
+  background: #b95298; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #8da70a; }
+  background: #d989c4; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #349140; }
+  background: #09d723; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #e0ad4e; }
+  background: #686086; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #94ce79; }
+  background: #1d5718; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #72067b; }
+  background: #63e304; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #90d074; }
+  background: #d426ba; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #16ce42; }
+  background: #1e3e85; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #512dab; }
+  background: #4fba5f; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #075a23; }
+  background: #731cfb; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #9331d4; }
+  background: #1baf44; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #118ff2; }
+  background: #659988; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #e0b35d; }
+  background: #b05741; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #ac1860; }
+  background: #6411da; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #c84939; }
+  background: #4ee533; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #23092e; }
+  background: #de7d99; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #69db63; }
+  background: #f9a9ca; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #46e86c; }
+  background: #f4c474; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #fabdb6; }
+  background: #7991ee; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #231cd4; }
+  background: #888a5e; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #e5f4b6; }
+  background: #cd0944; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #209104; }
+  background: #68271a; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #df803b; }
+  background: #d499da; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #f055ab; }
+  background: #3543bc; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #034a89; }
+  background: #5249a7; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #ba7369; }
+  background: #8408a1; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #0670ca; }
+  background: #be18d3; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #9f5bce; }
+  background: #5fb441; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #59fecd; }
+  background: #953a1e; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #f60903; }
+  background: #5b7180; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #0c970e; }
+  background: #f07756; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #437c4b; }
+  background: #d861aa; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #4cf125; }
+  background: #1b9e1a; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #bb9427; }
+  background: #793e7f; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #fdf4dd; }
+  background: #51ea96; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #477261; }
+  background: #3b7f6a; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #eed3bc; }
+  background: #b335cd; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #8664ea; }
+  background: #d2dd8b; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #c001da; }
+  background: #ffc131; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #27a74b; }
+  background: #6e29ba; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #93ebad; }
+  background: #388658; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11515,7 +11515,7 @@ input:checked + .sliders:before {
   margin-left: 6px; }
 
 .orange-c {
-  background: #FF8A5B !important; }
+  background: #ff8a5b !important; }
 
 .table-icon {
   font-size: 20px;
@@ -12895,33 +12895,43 @@ table .parent-row,
 .list-view-hover-wrapper {
   background: #fff;
   padding: 35px 35px 35px 44px;
-  border: 1px solid #C4C4C4; }
+  border: 1px solid #c4c4c4; }
   .list-view-hover-wrapper .content-wrapper {
     display: flex;
     justify-content: space-between; }
     .list-view-hover-wrapper .content-wrapper .dropdowns-wrapper {
-      border: 1px solid #C4C4C4;
+      border: 1px solid #c4c4c4;
       padding: 20px;
       width: 100%;
       margin-right: 27px; }
       .list-view-hover-wrapper .content-wrapper .dropdowns-wrapper .dropdown-main-div {
         display: flex;
-        justify-content: space-between;
-        align-items: center; }
+        justify-content: space-between; }
       .list-view-hover-wrapper .content-wrapper .dropdowns-wrapper .box-btn {
         display: flex;
-        justify-content: end; }
+        justify-content: flex-end; }
+    .list-view-hover-wrapper .content-wrapper .dropdown-container .dropdwon-contents-bottom .dropdown-connectors-list li {
+      padding: 3px 8px;
+      margin-bottom: 5px; }
+      .list-view-hover-wrapper .content-wrapper .dropdown-container .dropdwon-contents-bottom .dropdown-connectors-list li:hover {
+        background: #f6f6f6 !important; }
+    .list-view-hover-wrapper .content-wrapper .active-list {
+      background: #f6f6f6 !important; }
     .list-view-hover-wrapper .content-wrapper .view-boxs-wrapper {
       width: 100%; }
       .list-view-hover-wrapper .content-wrapper .view-boxs-wrapper .view-box {
-        border: 1px solid #C4C4C4;
-        padding: 20px; }
+        border: 1px solid #c4c4c4;
+        padding: 20px;
+        max-width: 270px; }
         .list-view-hover-wrapper .content-wrapper .view-boxs-wrapper .view-box h3 {
           font-weight: bold;
           margin-bottom: 22px; }
+        .list-view-hover-wrapper .content-wrapper .view-boxs-wrapper .view-box p label {
+          font-size: 14px;
+          margin-bottom: 27px; }
         .list-view-hover-wrapper .content-wrapper .view-boxs-wrapper .view-box .box-btn {
           display: flex;
-          justify-content: end; }
+          justify-content: flex-end; }
 
 .dropdown-div {
   max-height: 358px; }
@@ -12930,23 +12940,24 @@ table .parent-row,
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border: 1px solid #CDCDD6;
+  border: 1px solid #cdcdd6;
+  cursor: pointer;
   padding: 15px 12px;
-  min-width: 302px;
+  min-width: 260px;
   width: 100%; }
 
 .dropdwon-contents-top {
-  border: 1px solid #CDCDD6;
-  border-top: 0px solid #CDCDD6;
+  border: 1px solid #cdcdd6;
+  border-top: 0px solid #cdcdd6;
   padding: 15px; }
   .dropdwon-contents-top .filter-items-div input {
     width: 100%;
     padding: 10px;
-    border: 1px solid #CDCDD6; }
+    border: 1px solid #cdcdd6; }
 
 .dropdwon-contents-bottom {
-  border: 1px solid #CDCDD6;
-  border-top: 0px solid #CDCDD6;
+  border: 1px solid #cdcdd6;
+  border-top: 0px solid #cdcdd6;
   padding: 15px;
   position: relative;
   overflow: hidden; }
@@ -13001,17 +13012,17 @@ table .parent-row,
   height: 18px;
   width: 18px;
   background-color: #fff;
-  border: 1px solid #A9B1B9;
+  border: 1px solid #a9b1b9;
   border-radius: 50%; }
 
 /* On mouse-over, add a grey background color */
 .container:hover input ~ .checkmark {
   background-color: #fff;
-  border: 1px solid #A9B1B9; }
+  border: 1px solid #a9b1b9; }
 
 /* When the radio button is checked, add a blue background */
 .container input:checked ~ .checkmark {
-  background-color: #2196F3; }
+  background-color: #2196f3; }
 
 /* Create the indicator (the dot/circle - hidden when not checked) */
 .checkmark:after {
