--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8730,205 +8730,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #f6435e; }
+  background: #c18caf; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #20b5cf; }
+  background: #7ea871; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #4be570; }
+  background: #d9047c; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #ba743f; }
+  background: #d392fd; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #d0d79a; }
+  background: #732159; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #075eae; }
+  background: #9566a7; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #5d5597; }
+  background: #09854f; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #80ab66; }
+  background: #ad033d; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #4a6482; }
+  background: #7db8a5; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #45b531; }
+  background: #de3cb0; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #c710c6; }
+  background: #5c67f2; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #07a505; }
+  background: #b74cd3; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #5efa92; }
+  background: #61c6f8; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #842258; }
+  background: #6d01d5; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #f3ea1f; }
+  background: #ee97b4; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #c02b19; }
+  background: #5da6c0; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #406e4e; }
+  background: #a950f5; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #544947; }
+  background: #fbb137; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #633af6; }
+  background: #2e3c80; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #5b8094; }
+  background: #75106e; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #3e8442; }
+  background: #897dc1; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #211657; }
+  background: #7ca820; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #ae5a14; }
+  background: #c27f3a; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #248fc1; }
+  background: #4a0b69; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #ba6b46; }
+  background: #e08e98; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #fd1fae; }
+  background: #d57b7b; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #a66f8b; }
+  background: #c62ad8; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #09329a; }
+  background: #aece47; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #e0ae5f; }
+  background: #cae12f; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #0d8b8c; }
+  background: #3563cf; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #160ca1; }
+  background: #7d8870; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #eccca9; }
+  background: #e3242f; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #5b508c; }
+  background: #da2ec5; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #233d34; }
+  background: #743650; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #fabd03; }
+  background: #084eff; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #b9e0bf; }
+  background: #91d3e5; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #6078c0; }
+  background: #c4184c; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #30cf95; }
+  background: #5fc2ab; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #8f8aa2; }
+  background: #7a6439; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #6f36f5; }
+  background: #337004; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #30b317; }
+  background: #2d0f30; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #1f9a44; }
+  background: #de26db; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #c9da1d; }
+  background: #b7028b; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #52f85f; }
+  background: #d7b6a7; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #617641; }
+  background: #828d0e; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #a2a6bd; }
+  background: #21102d; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #420383; }
+  background: #fb217f; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #6987f7; }
+  background: #836864; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #ea3bb0; }
+  background: #bb8f35; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #05e2e4; }
+  background: #566f93; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #af865d; }
+  background: #7c6354; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #075991; }
+  background: #4623cf; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #06fcc8; }
+  background: #45bd9e; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #6358b8; }
+  background: #34a8c9; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #76b2c8; }
+  background: #fdd798; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #046cf5; }
+  background: #c35504; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #41c416; }
+  background: #92ee8a; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #9445a7; }
+  background: #d01b77; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #e1fc62; }
+  background: #e10f69; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #b95298; }
+  background: #a825e6; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #d989c4; }
+  background: #311331; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #09d723; }
+  background: #3c40a6; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #686086; }
+  background: #d2cd57; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #1d5718; }
+  background: #aba2b7; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #63e304; }
+  background: #906243; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #d426ba; }
+  background: #4cd724; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #1e3e85; }
+  background: #374026; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #4fba5f; }
+  background: #313949; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #731cfb; }
+  background: #521c3d; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #1baf44; }
+  background: #f5a373; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #659988; }
+  background: #3ae5a0; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #b05741; }
+  background: #256106; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #6411da; }
+  background: #ab36ab; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #4ee533; }
+  background: #95914c; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #de7d99; }
+  background: #1c18b8; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #f9a9ca; }
+  background: #5b4a16; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #f4c474; }
+  background: #c7caa1; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #7991ee; }
+  background: #3a4079; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #888a5e; }
+  background: #8d7556; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #cd0944; }
+  background: #ab52bc; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #68271a; }
+  background: #410fca; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #d499da; }
+  background: #7d1756; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #3543bc; }
+  background: #f128db; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #5249a7; }
+  background: #334b60; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #8408a1; }
+  background: #b8b5ab; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #be18d3; }
+  background: #82a6d8; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #5fb441; }
+  background: #f84ab1; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #953a1e; }
+  background: #c31ea8; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #5b7180; }
+  background: #ed474c; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #f07756; }
+  background: #e30e16; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #d861aa; }
+  background: #0fc462; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #1b9e1a; }
+  background: #39b265; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #793e7f; }
+  background: #7708b0; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #51ea96; }
+  background: #707dae; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #3b7f6a; }
+  background: #bf2525; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #b335cd; }
+  background: #e2fedf; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #d2dd8b; }
+  background: #9095e4; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #ffc131; }
+  background: #228466; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #6e29ba; }
+  background: #7ed109; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #388658; }
+  background: #a338dd; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -12926,6 +12926,8 @@ table .parent-row,
         .list-view-hover-wrapper .content-wrapper .view-boxs-wrapper .view-box h3 {
           font-weight: bold;
           margin-bottom: 22px; }
+        .list-view-hover-wrapper .content-wrapper .view-boxs-wrapper .view-box p input {
+          margin-right: 5px !important; }
         .list-view-hover-wrapper .content-wrapper .view-boxs-wrapper .view-box p label {
           font-size: 14px;
           margin-bottom: 27px; }
@@ -13329,7 +13331,9 @@ table .parent-row,
 
   .view-boxs-wrapper {
     width: 100%;
-    margin-top: 20px; } }
+    margin-top: 20px; }
+    .view-boxs-wrapper .view-box {
+      max-width: 100%; } }
 /*767 screen end here*/
 /*768 to 1023 screen css*/
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
